Add the GULP template
A example gulp template file is added. And the param.yml file has been
updated to include the GCMC parameters at 100K 1bar.

--- a/example/params.yml
+++ b/example/params.yml
@@ -1,5 +1,10 @@
+# The stacking files
 prefix: ./
 stacking: stacking.yml
+# structural parameters
 PSX: 1
 PSY: 3
 SS: 3
+# For GCMC
+chem_potential: -0.3017
+temperature: 300.0
